faq section markup and original styling done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     <title>Strm Arena | Live Stream You're Favorite Teams</title>
   </head>
   <body>
@@ -36,5 +37,50 @@
         </div>
       </div>
     </header>
+
+    <!-- Main -->
+    <main>
+      <div class="container">
+        <!-- FAQ Section -->
+        <section id="faq" class="faq">
+          <div class="section-heading">
+            <h2>Frequently Asked Questions</h2>
+          </div>
+          <div class="accordion">
+            <div class="accordion-header">What is Strm Arena?</div>
+            <div class="accordion-content">
+              <p>
+                Strm Arena allows fans everywhere to enjoy watching home and away games live without
+                cable or sport packages.
+              </p>
+            </div>
+            <div class="accordion-header">How does Strm Arena work?</div>
+            <div class="accordion-content">
+              <p>
+                Create a free account and begin searching for your favorite teams. Suscribe to your
+                favorite team for a monthly fee and gain access to all of their home and away games
+                live.
+              </p>
+            </div>
+            <div class="accordion-header">Why Strm Arena?</div>
+            <div class="accordion-content">
+              <p>
+                Strm Arena removes all the middle people and allows the fan direct access to their
+                favorite team. Whether it's one team or multiple team, subscribe to your team and
+                have access to their games live. No Cable. No Sport Packages. No Commitments.
+              </p>
+            </div>
+            <div class="accordion-header">When will Strm Arena be live?</div>
+            <div class="accordion-content">
+              <p>
+                We're currently working on the functionality and ensuring that our users will have
+                the best experience possible. Submit your email to be notified as soon as we go
+                live.
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
