footer markup created and first media queries styles added

--- a/index.html
+++ b/index.html
@@ -82,5 +82,20 @@
         </section>
       </div>
     </main>
+
+    <!-- Footer -->
+    <footer class="footer" id="footer">
+      <div class="container flex-wrapper">
+        <div class="logo">
+          <h3>Strm Arena</h3>
+        </div>
+        <div class="copyright">
+          <p>All Rights Reserved</p>
+        </div>
+        <div class="contact">
+          <p>contact@contact.com</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
