--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="accordion-content">
               <p>
                 Strm Arena removes all the middle people and allows the fan direct access to their
-                favorite team. Whether it's one team or multiple team, subscribe to your team and
+                favorite team. Whether it's one team or multiple teams, subscribe to your team and
                 have access to their games live. No Cable. No Sport Packages. No Commitments.
               </p>
             </div>
@@ -93,7 +93,7 @@
           <p>All Rights Reserved</p>
         </div>
         <div class="contact">
-          <p>contact@contact.com</p>
+          <p>contact.strmarena.com</p>
         </div>
       </div>
     </footer>
